Fix: Horizontal Scroll

--- a/res/screen.css
+++ b/res/screen.css
@@ -33,6 +33,15 @@ body {
   max-width: 720px; /* This will be overridden on large screens */
 }
 
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
 @media screen and (min-width: 1024px) {
   body {
     max-width: 960px;
@@ -453,40 +462,6 @@ footer {
   padding: 1rem;
   text-align: center;
 }
-  /*footer img.cc {
-    display: inline-block;
-    vertical-align: -0.2em;
-    border: none;
-    width:1em;
-    height:1em;
-    opacity:0.6;
-  }
-  footer a {
-    color: #333;
-    opacity: 0.3;
-  }
-  footer a:hover {
-    opacity:0.6;
-  }
-  footer a.cc {
-    background: none;
-    text-shadow: none;
-  }
-  footer a.cc:hover {
-    text-decoration: none;
-  }
-  footer a.cc:hover img.cc {
-    opacity:1;
-  }*/
-
-
-/* small screens */
-/*@media only screen and (max-device-width: 480px) {
-}*/
-
-/*
-Tag stuff
-*/
 
 #item-wrapper {
   display: grid;
